@@ -33,6 +33,7 @@
 * Upgrade Spring to 5.2.6
 * Upgrade Spring security to 5.3.1
 * Persist HTTP sessions across reboots so Users are not logged out
+* Delete Mango work directory on upgrade as it is only used for the legacy UI
 
 *Version 3.7.4*
 * Improve work item failure logging
